k8s/event_bus/03-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: event-bus
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
    - name: http
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
